compilers/picocuda/src/opto/son/snapshots/picoc__son__parser__test_lexer__add_compound.snap
---
source: src/son/parser.rs
expression: tokens
---
[
    Token {
        lexeme: "int",
        typ: KeywordInt,
    },
    Token {
        lexeme: "main",
        typ: Alias,
    },
    Token {
        lexeme: "(",
        typ: PuncLeftParen,
    },
    Token {
        lexeme: ")",
        typ: PuncRightParen,
    },
    Token {
        lexeme: "{",
        typ: PuncLeftBrace,
    },
    Token {
        lexeme: "return",
        typ: KeywordRet,
    },
    Token {
        lexeme: "9",
        typ: LiteralInt,
    },
    Token {
        lexeme: "+",
        typ: Plus,
    },
    Token {
        lexeme: "10",
        typ: LiteralInt,
    },
    Token {
        lexeme: "+",
        typ: Plus,
    },
    Token {
        lexeme: "11",
        typ: LiteralInt,
    },
    Token {
        lexeme: ";",
        typ: PuncSemiColon,
    },
    Token {
        lexeme: "}",
        typ: PuncRightBrace,
    },
]
